--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^4.5.1",
     "jest": "^27.0.5",
     "live-server": "^1.2.1",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "terser-webpack-plugin": "^5.0.3",
